@@ -25,6 +25,8 @@ efl (1.12.2-0.1) UNRELEASED; urgency=medium
   * Ship newly added libefl in libeina-dev/libeina1 package.
   * Ship eolian code generator.
   * Ship .eo files in -dev packages.
+  * Fix FTBFS on arch-all builds when "make doc" was invoked *before* the
+    regular build.
 
  -- Andreas Metzler <ametzler@debian.org>  Mon, 17 Nov 2014 18:50:55 +0100
 
